# film-emulation-cpp

./: .gitignore  CMakeLists.txt  README.md  imgio.cpp  imgio.h  main.cpp
grain_newson_et_al/: film_grain_rendering.cpp  film_grain_rendering.h  film_grain_rendering_main.cpp  libtiff_io.cpp  libtiff_io.h
